_sass/layout/_responsive.scss
/* ... */
@media only screen and (max-width: 860px) {

	main .wrap,
	body.landing .welcome .mainlinks ul {
		max-width: auto;
		width: 100%;
	}

	br.break {
		display: none;
	}

	nobr.break {
		display: inline-flex;
		margin-right: 5px;
	}

	a.externallink {
		margin-right: 0;
	}

	body.landing .welcome .mainlinks ul li {
		min-width: 160px;
	}

	.wrap.whyduckdb div.flex,
	body.documentation main .wrap.whyduckdb #main_content_wrap,
	.wrap.whyduckdb article {
		display: block;
		width: 100%;
	}

	.wrap.whyduckdb .footnotes.mobilesups {
		margin-left: 0;
		margin-top: 50px;
		width: 90%;
		border-top: 1px solid #ebebeb;

		div.sup {
			position: relative;
			margin-top: 20px;
		}
	}

	.newswrap .sidebar {
		display: none;
	}

	body.landing .stickerbanner>div:nth-child(2) {
		text-align: right;
	}

	body.documentation .headlinebar {
		>div.improvethispage {
			display: none;
		}

		.breadcrumbs {
			width: 100%;
			order: 2;
		}

		div.versionselect {
			width: 100%;
			position: relative;
			height: 42px;
		}

		div.version {
			position: absolute;
			top: 0;
			left: 0;
			order: 1;

			>div:first-child {
				position: relative;
			}

			span.arrow {
				top: 5px;
			}
		}

		.title {
			order: 3;
			margin-top: 5px;
		}
	}
}

@media only screen and (max-width: 780px) {
	footer .sitefooter .footercontent>div:first-child {
		width: 100%;
		margin-bottom: 30px;
	}

	header .headerline .headercontent .landingmenu nav .starcount {
		display: none;
	}
	
	.box-link.half-width{
		width: 100%;
	}
}

@media only screen and (max-width: 700px) {
	body.landing .welcome .mainlinks ul li {
		min-width: 160px;
	}

	body.landing .install p {
		margin-bottom: 25px;
	}
}

@media only screen and (max-width: 660px) {

	

	
	p.system {
		display: inline-grid;
	}

	body.landing .install .result+p span {
		margin-left: 0;
	}
	
	header .headerline .headercontent{
		max-width: 100%;
	}
	
	footer .sitefooter .footercontent {
		max-width: calc(100% - 30px);
	}

	footer .sitefooter .footercontent {
		padding: 45px 0;
	}
	
	footer .sitefooter .footercontent .bottomline{
		margin-bottom: 0;
		flex-wrap: wrap;
		flex-direction: column;
	}

	

	

	body.landing .welcome .mainlinks ul,
	body.landing .benefits .mainlinks ul {
		max-width: 80%;
		display: block;
	}
	
	.pagehead h1 {
		padding: 50px 15px;
	}

	main.f-md .pagehead+.wrap {
		padding: 50px 15px;
	}

	body.landing .welcome .mainlinks ul li,
	body.landing .boxlayout .box {
		margin-bottom: 40px;
		width: 100%;
	}

	body.landing .boxlayout .box div:nth-child(2) {
		width: calc(100% - 100px);
	}

	body.landing .using .box div:not(.icon) {
		padding-right: 0;
		width: calc(100% - 85px);
	}

	body.landing .docu .boxlayout .box:first-child {
		padding-right: 0;
	}

	body.landing .docu .boxlayout .box .button {
		width: 100%;
	}

	body.landing .newsblog .newstileswrap .postpreview {
		width: 100%;
		margin-bottom: 50px;
	}

	section.blog .newstileswrap{
		margin-bottom: 32px;
	}

	.newswrap .headlinebar {
		padding-left: 15px;
	}

	body.landing .stickerbanner {
		flex-wrap: wrap;

		>div {
			width: 100%;

			&:nth-child(2) {
				display: none;
			}
		}
	}

	footer .sitefooter .footercontent {
		column-gap: 0;

		>div {
			width: 180px;
			margin-bottom: 30px;

			&:first-child {
				width: 100%;
			}
		}
	}

	body.landing footer .sitefooter .footercontent .footernavigation,
	.sitefooter .footercontent .footernavigation {
		column-gap: 30px;
		row-gap: 40px;
		flex-wrap: wrap;

		>div {
			width: calc(50% - 15px);
		}

		a {
			line-height: 1.5;
		}
	}

	section.blog .postpreview,
	section.upcoming-events .postpreview,
	.library-tiles .librarypreview.postpreview,
	.science-tiles .sciencepreview.postpreview,
	.everywhere-tiles .everywherepreview.postpreview,
	main.main-library .recentposts .newstileswrap .postpreview,
	main.main-science .recentposts .newstileswrap .postpreview,
	.post-list .newstiles .postpreview,
	.newswrap .postwrap .recentposts .postpreview,
	.newswrap .postwrap .postcontent .recentposts .postpreview {
		width: 100%;
		margin-bottom: 10px;
	}

	.library-tiles .librarypreview.postpreview,
	.everywhere-tiles .everywherepreview.postpreview {
		display: flex;
		flex-direction: row;
		background: none;
		border: none;
		box-shadow: none;
		.postimg {
			width: 115px;
			min-width: 115px;
			max-height: 115px;
			aspect-ratio: 1/1;
			border-radius: var(--border-radius-box);
			&::after {
				width: 80px;
				height: 80px;
			}
			.pill-container {
				top: 8px;
				left: 8px;
				gap: 4px;
				max-width: calc(100% - 16px);
				.pill-tag ~ .pill-tag {
					display: none;
				}
			}
			.pill-tag {
				font-size: 8px;
				padding: 4px 8px;
				overflow: hidden;
				text-overflow: ellipsis;
			}
		}
		.postdetails {
			padding: 12px;
			display: flex;
			flex-direction: column;
			justify-content: center;
			min-width: 0;
			.tags {
				display: none;
			}
			h3 {
				font-size: 16px;
				min-height: unset;
				margin-bottom: 8px;
				display: -webkit-box;
				-webkit-line-clamp: 3;
				line-clamp: 3;
				-webkit-box-orient: vertical;
				overflow: hidden;
			}
			.meta {
				margin-top: 0px;
				column-gap: 16px;
			}
		}
	}
	.everywhere-tiles .everywherepreview.postpreview .postdetails .tags {
		display: flex;
		margin-bottom: 4px;
	}

	.newswrap .postwrap .postcontent .recentposts{
		padding: 50px 15px;
	}
	
	.pagetitle {
		padding: 35px 0px;
	}
	
	body.installation {
		.selection-options {
			gap: 10px;
	
			.option {
				height: 54px;
				padding: 8px;
	
				.symbol {
					width: 36px;
					height: 36px;
	
					img {
						max-width: 16px;
						max-height: 16px;
					}
				}
			}
		}
	
		.installation-instructions {
			pre,
			.selection-foldout {
				padding: 15px;
			}
	
			#result .more {
				gap: 15px;
			}
		}
	
		.selection-head h3 .selected {
			margin-left: 15px;
		}
	
		.shainfo {
			line-height: 1;
	
			span {
				font-size: 12px;
	
				&.hash {
					word-break: break-all;
					overflow-wrap: anywhere;
				}
			}
		}
	}
}
/* ... */

